<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/operationTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/numberTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="70sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/advancedLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="gone"
            style="?android:buttonBarStyle">
            <Button
                android:id="@+id/squareRootB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="symbolClick"
                android:text="@string/sqrt"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                 android:background="@color/light_gray"/>

            <Button
                android:id="@+id/expoB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="symbolClick"
                android:text="@string/pow"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/light_gray"/>

            <Button
                android:id="@+id/percentageB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="symbolClick"
                android:text="@string/percentage"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/light_gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">

            <Button
                android:id="@+id/sevenNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_7"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/eightNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_8"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/nineNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_9"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/plusB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="symbolClick"
                android:text="@string/plus"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/light_gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">

            <Button
                android:id="@+id/fourNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_4"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/fiveNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_5"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/sixNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_6"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/minusB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="symbolClick"
                android:text="@string/minus"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/light_gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">

            <Button
                android:id="@+id/oneNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_1"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/twoNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_2"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/threeNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_3"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/timesB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="symbolClick"
                android:text="@string/times"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/light_gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">

            <Button
                android:id="@+id/zeroNB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/_0"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/dotB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:text="@string/dot"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/equalsB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="calculate"
                android:text="@string/equal"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/light_gray"/>

            <Button
                android:id="@+id/divideB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="symbolClick"
                android:text="@string/divide"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/light_gray"/>

            <Button
                android:id="@+id/clearB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reset"
                android:text="@string/c"
                android:textSize="50sp"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/light_gray"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>